# ttgn.pokedex

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  alembic.ini  requirements.txt  setup.cfg  tox.ini
docs/: conf.py  index.rst
scripts/loaders/: 057a815dde73_version_translations.py  __init__.py
scripts/loaders/sources/: __init__.py  veekun.py
tests/: conftest.py
tests/ttgn/: pokedex_test.py
tests/ttgn/pokedex/: utils_test.py
tests/ttgn/pokedex/models/: base_test.py  multilang_test.py  versions_test.py
ttgn/pokedex/: __init__.py  alembic.ini  utils.py
ttgn/pokedex/migrations/: __init__.py  env.py  script.py.mako  veekun.py
ttgn/pokedex/migrations/data/: 057a815dde73_upgrade_insert_versions.VersionTranslation.csv  057a815dde73_upgrade_insert_versions.VersionTranslation_veekun.csv  088903c1ed2a_upgrade_insert_base.Language.csv  1888d425f419_upgrade_insert_multilang.LanguageTranslation.csv  317f62cffc9a_upgrade_insert_versions.Version.csv  317f62cffc9a_upgrade_insert_versions.VersionGroup.csv  317f62cffc9a_upgrade_versions.Version.csv  317f62cffc9a_upgrade_versions.VersionGroup.csv  763b433aaf4a_upgrade_versions.Generation.csv  __init__.py
ttgn/pokedex/migrations/versions/: 057a815dde73_translate_version_names.py  088903c1ed2a_languages.py  1888d425f419_language_translations.py  317f62cffc9a_version_groups_and_versions.py  763b433aaf4a_generations.py
ttgn/pokedex/models/: __init__.py  base.py  multilang.py  versions.py
