[metadata]
name = ttgn.pokedex
description = A database of Pokémon information
long_description = file: README.md, LICENSE
author = Jesse B. Hannah
author_email = jesse@jbhannah.net
url = https://github.com/thetallgrassnet/ttgn.pokedex
license = MIT
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.4, < 4
zip_safe = True

[files]
packages = ttgn

[extras]
development =
    importmagic
    pylint
    yapf
testing =
    pytest
    pytest-cov
    tox
    tox-pyenv

[tool:pytest]
addopts = --cov=ttgn
