[metadata]
name = ttgn.pokedex
description = A database of Pokémon information
long_description = file: README.md, LICENSE
author = Jesse B. Hannah
author_email = jesse@jbhannah.net
url = https://github.com/thetallgrassnet/ttgn.pokedex
license = MIT
platform = any
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >= 3.5, < 4
zip_safe = True

[files]
packages = ttgn

[extras]
development =
    autoflake
    importmagic
    pylint
    rope
    yapf
testing =
    pytest ~= 3.8
    pytest-cov
    tox ~= 3.4
    tox-pyenv

[isort]
known_sqlalchemy = sqlalchemy
not_skip =
    __init__.py
sections=
    FUTURE
    STDLIB
    THIRDPARTY
    SQLALCHEMY
    FIRSTPARTY
    LOCALFOLDER

[tool:pytest]
addopts = --cov=ttgn
